--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -84,222 +84,158 @@ fornisce i propri metodi all'esterno, direttamente nell'interfaccia dell'oggetto
 complessa, più dell'ereditarietà. L'aggregazione è consigliata per una gestione a parti (a differenza della delegazione, 
 ogni oggetto si preoccupa di fare da gestore delle richieste ai metodi che implementa).
 \subsection{Interazione C/S in COM}
-L'idea base è che vi sia uniformità di comportamento fra ogni tipologia d'oggete
-to: non interessa quindi come è fatto, ma la possibilità di poterci interagire in
-maniera C/S trasparente. Il problema è che il costo è molto diverso in realtà a
-seconda del tipo di oggetto con cui si prova a colloquiare (accedere ad una DLL
-in maniera C/S è molto più ottimizzato che accedere ad un oggetto remoto).
-Quindi, a differenza di CORBA36 , l'implementazione sottostante è diversa a
-seconda di quale tipo di oggetto si acceda
-Un oggetto in COM, perché si possa riconoscere come server, deve fornire
-la capacità di istanziare degli oggetti : in generale questo viene realizzato utiliza
-zando delle Factory, che non son classi ma gestori d'entità. Ogni Factory ha
-una sua politica per l'attivazione (potrebbe per esempio realizzare un singleton,
-fornendo il riferimento sempre alla sola copia attiva), ma i diversi meccanismi
-devono restare nascosti.
-Un server quindi implementa o l'interfaccia IClassFactory (oppure la sua
-seconda versione, che permette di lavorare anche sfruttando un'apposita licenza dell'oggetto stesso). Queste interfacce
-infatti definiscono un metodo per
-creare un'istanza dell'oggetto, oppure di ottenere un riferimento all'oggetto già
-esistente (CreateInstance). Questo metodo (e le sue varianti) devono quindi
-esplorare il registry alla ricerca di un oggetto che implementa l'interfaccia ricercata; si può anche specificare un
-contesto, ovvero spiegare dove si potrebbe
-ricercare l'oggetto.
+L'idea base è che vi sia uniformità di comportamento fra ogni tipologia d'oggetto: non interessa quindi come è fatto, ma 
+la possibilità di poterci interagire in maniera C/S trasparente. Il problema è che il costo è molto diverso in realtà a
+seconda del tipo di oggetto con cui si prova a colloquiare (accedere ad una DLL in maniera C/S è molto più ottimizzato 
+che accedere ad un oggetto remoto).
+Quindi, a differenza di CORBA\footnote{Uso perenne dell'ORB}, l'implementazione sottostante è diversa a seconda di quale 
+tipo di oggetto si acceda. Un oggetto in COM, perché si possa riconoscere come server, deve fornire la capacità di 
+istanziare degli oggetti: in generale questo viene realizzato utilizzando delle Factory, che non son classi ma gestori 
+d'entità. Ogni Factory ha una sua politica per l'attivazione (potrebbe per esempio realizzare un singleton, fornendo il 
+riferimento sempre alla sola copia attiva), ma i diversi meccanismi devono restare nascosti.
+Un server quindi implementa o l'interfaccia IClassFactory (oppure la sua seconda versione, che permette di lavorare 
+anche sfruttando un'apposita licenza dell'oggetto stesso). Queste interfacce infatti definiscono un metodo per creare 
+un'istanza dell'oggetto, oppure di ottenere un riferimento all'oggetto già esistente (CreateInstance). Questo metodo (e 
+le sue varianti) devono quindi esplorare il registry alla ricerca di un oggetto che implementa l'interfaccia ricercata; 
+si può anche specificare un contesto, ovvero spiegare dove si potrebbe ricercare l'oggetto.
 Esistono 3 tipi possibili di server in COM:
-$\bullet$ In-process: lavora nello stesso spazio di lavoro del client, mediante un'apposita DLL.
-$\bullet$ Locale: lavora in un processo diverso, ma sulla stessa macchina.
-$\bullet$ Remoto altrimenti.
-Il problema di COM è che, volendo garantire un'alta trasparenza, richiedeche
-vengano definite tantissime interfacce. Un'altra interfaccia è per esempio COe
-MOBJ, che si preoccupa di cercare nel registry l'esistenza delle DLL necessarie,
-ne fornisce il riferimento o le carica in memoria. Questo comporta che l'utente debba conoscere i meccanismi presenti in
-COM ! Fortunatamente, gli stessi
-meccanismi funzionano anche lavorando out-of-process.
-L'unica cosa che si aggiunge lavorando out-of-process è la presenza di proxy
-e stub per facilitare la comunicazione e realizzare la trasparenza alla comunicazione. Fra proxy e stub si stabilisce
-quindi in maniera automatica un canale,
-che permette ai due processi di comunicare fra di loro: è comunque un'astrazione
-36 Uso
-perenne dell'ORB
-75
-(in locale si lavorerebbe utilizzando la memoria comune!). Per definire questi
-componenti, si è sviluppato un apposito IDL, MIDL. Questo deriva e rispetta
+\begin{itemize}
+ \item \textit{In-process}: lavora nello stesso spazio di lavoro del client, mediante un'apposita DLL.
+ \item \textit{Locale}: lavora in un processo diverso, ma sulla stessa macchina.
+ \item \textit{Remoto} altrimenti
+\end{itemize}
+Il problema di COM è che, volendo garantire un'alta trasparenza, richiede che vengano definite tantissime interfacce. 
+Un'altra interfaccia è per esempio COMOBJ, che si preoccupa di cercare nel registry l'esistenza delle DLL necessarie,
+ne fornisce il riferimento o le carica in memoria. Questo comporta che l'utente debba conoscere i meccanismi presenti
+in COM! Fortunatamente, gli stessi meccanismi funzionano anche lavorando out-of-process.
+L'unica cosa che si aggiunge lavorando out-of-process è la presenza di proxy e stub per facilitare la comunicazione e 
+realizzare la trasparenza alla comunicazione. Fra proxy e stub si stabilisce quindi in maniera automatica un canale,
+che permette ai due processi di comunicare fra di loro: è comunque un'astrazione (in locale si lavorerebbe utilizzando 
+la memoria comune!). Per definire questi componenti, si è sviluppato un apposito IDL, MIDL. Questo deriva e rispetta
 le specifiche di DCE, ma risulta comunque essere incompatibile con altri IDL.
-Come funziona quindi la comunicazione in COM? Si lavora per sequenza: si
-tenta inizialmente di accedere alla risorsa in process, poi in locale, ed infine si
-tenta in remoto sfruttando come meccanismo RPC. In certi casi, essendo poco
+Come funziona quindi la comunicazione in COM? Si lavora per sequenza: si tenta inizialmente di accedere alla risorsa in 
+process, poi in locale, ed infine si tenta in remoto sfruttando come meccanismo RPC. In certi casi, essendo poco 
 costosa, si utilizza RPC anche in locale, di tipo diverso e più leggera.
-Per la gestione remota, vi è anche la presenza di un ulteriore attore al livello
-più basso detto Service Control Manager, che si comporta proprio come un mw!
-Infatti, un proxy che volesse comunicare, si riferisce al SCMper ottenere un
-riferimento all'oggetto remoto, e quindi può realizzare una RPC remota.Questa
-architettura comporta quindi che SCM debba essere presente su ogni nodo, e
-che proxy e stub debbano essere stabiliti prima, in maniera da poter conoscere
-la posizione del SCM! Si potrebbe anche avere, tuttavia, che non vengano mai
-usati se la risorsa è disponibile in-process!
+Per la gestione remota, vi è anche la presenza di un ulteriore attore al livello più basso detto \textit{Service 
+Control Manager}, che si comporta proprio come un mw!
+Infatti, un proxy che volesse comunicare, si riferisce al SCM per ottenere un riferimento all'oggetto remoto, e quindi 
+può realizzare una RPC remota. Questa architettura comporta quindi che SCM debba essere presente su ogni nodo, e
+che proxy e stub debbano essere stabiliti prima, in maniera da poter conoscere la posizione del SCM! Si potrebbe anche 
+avere, tuttavia, che non vengano mai usati se la risorsa è disponibile in-process!
 \subsection{DCOM}
-DCOM nasce negli anni 90 come esigenza si introdurre anche in COM (come
-in CORBA) l'interazione dinamica. In particolare, ciò che si introduce è il
-concetto di automation, ovvero la possibilità di fornire ad un client di poter
-gestire oggetti per cui non aveva previsto l'interazione. Si tratta anche di un
-modello realizzato per cercare di andare oltre al classico modello a code di eventi.
-Inizialmente, automation nasce come possibilità per linguaggi dinamici (tipo
-quelli di scripting per il Web) di poter accedere all'architettura COM. Questo
-genere di linguaggi infatti spesso sono loosely-typed e studiati in maniera tale
-da avere poco controllo. Prima di automation risultava difficile realizzare proxy
-anche per questi linguaggi.
-Quello che fa automation è semplicemente la realizzazione in automatico di
-una DLL che funzioni come intermediario fra i due mondi, fra COM e qualsiasi
-altro lingaggio, se tale interazione non era già stata prevista in maniera statica.
-Automation permette quindi di esplorare, in maniera automatica, un oggetto
-la cui interfaccia è sconosciuta a tempo di esecuzione. Automation incorpora
-concetti già visti in OLE, come la in-place activation, per cui un gestore viene
-attivato solo se è necessario, cioè se è richiesto da un sottocomponente. DCOM
-e e
-introduce anche altre tecnologie, come lo structured storage (tutto è all'interno
-di un singolo le) e un sistema di scambio dei dati unificato. DCOM introduce
+DCOM nasce negli anni 90 come esigenza si introdurre anche in COM (come in CORBA) l'interazione dinamica. In 
+particolare, ciò che si introduce è il concetto di automation, ovvero la possibilità di fornire ad un client di poter
+gestire oggetti per cui non aveva previsto l'interazione. Si tratta anche di un modello realizzato per cercare di andare 
+oltre al classico modello a code di eventi.
+Inizialmente, automation nasce come possibilità per linguaggi dinamici (tipo quelli di scripting per il Web) di poter 
+accedere all'architettura COM. Questo genere di linguaggi infatti spesso sono loosely-typed e studiati in maniera tale
+da avere poco controllo. Prima di automation risultava difficile realizzare proxy anche per questi linguaggi.
+Quello che fa automation è semplicemente la realizzazione in automatico di una DLL che funzioni come intermediario fra i 
+due mondi, fra COM e qualsiasi altro lingaggio, se tale interazione non era già stata prevista in maniera statica.
+Automation permette quindi di esplorare, in maniera automatica, un oggetto la cui interfaccia è sconosciuta a tempo di 
+esecuzione. Automation incorpora concetti già visti in OLE, come la in-place activation, per cui un gestore viene
+attivato solo se è necessario, cioè se è richiesto da un sottocomponente. DCOM introduce anche altre tecnologie, come lo 
+structured storage (tutto è all'interno di un singolo file) e un sistema di scambio dei dati unificato. DCOM introduce
 soprattutto diversi strumenti proprietari Microsoft per il web, spesso incompatibili con altri strumenti.
-Per introdurre la dinamicità, un oggetto deve implementare anche l'interfaca
-cia IDispatch, che è riflessiva, la base stessa di automation. Infatti, a differenza
-di CORBA, in COM-DCOM non vi è un IR per registrare le interfacce: si tratta
-quindi di interrogare ed invocare in maniera dinamica i componenti! Si tratta
-di un sistema del tutto analogo alla Request di CORBA.
-76
-Quindi, alcuni metodi riportano informazioni sul componente (GetTypeInfo,
-GetTypeInfoCount), altri preparano il client a richiedere l'invocazione (GetIDsOfNames) e infine vi è un metodo per
-invocare in maniera dinamica l'oggetto
-stesso. IDispatch, essendo un'interfaccia COM, eredita direttamente da IUnknown. Possiamo così sostituire questa ed
-altre interfacce, permettendo un'ese\i{}
-cuzione sempre dinamica (ma costosa).
-Si può quindi iniziare a parlare di componenti veri, che rappresentano un'esteno
-sione degli oggetti: sono più pervasivi, garantendo di non avere limiti alla riusabilità e possibilità di essere usati
-in un qualunque contesto, senza dover dipena
-dere come gli oggetti da un determinato linguaggio.
-A differenza però di CORBA, essendo la VMT ssa, non è possibile realizzare
-un server dinamico!.
+Per introdurre la dinamicità, un oggetto deve implementare anche l'interfaca cia IDispatch, che è riflessiva, la base 
+stessa di automation. Infatti, a differenza di CORBA, in COM-DCOM non vi è un IR per registrare le interfacce: si tratta
+quindi di interrogare ed invocare in maniera dinamica i componenti! Si tratta di un sistema del tutto analogo alla 
+Request di CORBA.
+Quindi, alcuni metodi riportano informazioni sul componente (GetTypeInfo, GetTypeInfoCount), altri preparano il client a 
+richiedere l'invocazione (GetIDsOfNames) e infine vi è un metodo per invocare in maniera dinamica l'oggetto stesso. 
+IDispatch, essendo un'interfaccia COM, eredita direttamente da IUnknown. Possiamo così sostituire questa ed altre 
+interfacce, permettendo un'esecuzione sempre dinamica (ma costosa).
+Si può quindi iniziare a parlare di componenti veri, che rappresentano un'estensione degli oggetti: sono più pervasivi, 
+garantendo di non avere limiti alla riusabilità e possibilità di essere usati in un qualunque contesto, senza dover 
+dipendere come gli oggetti da un determinato linguaggio.
+A differenza però di CORBA, essendo la VMT fissa, non è possibile realizzare un server dinamico!.
 \subsection{Interazione in DCOM}
-COM era stato pensato per fornire una visione di alto livello uniforme (sempre
-C/S), per cercare anche di rendere un'ottimizzazione molto forte a seconda
-della comunicazione che si andava a realizzare. A basso livello invece si ha un
+COM era stato pensato per fornire una visione di alto livello uniforme (sempre C/S), per cercare anche di rendere 
+un'ottimizzazione molto forte a seconda della comunicazione che si andava a realizzare. A basso livello invece si ha un
 comportamento molto variegato, con un'alta idea di delegazione.
-A sua volta, DCOM prevede di definire dei riferimenti diretti fra C e S,
-facendo in modo quindi che si conoscano comunque, nonostante l'uso di un'interfaccia. Questi riferimenti quindi non son
-persistenti.37 . DCOM si preoccupa
-di aumentare la dinamicità, cercando anche di andare oltre al C/S, ma fornendo
-strumenti per trovare in maniera automatica la soluzione, fornendo supporto
-alla portabilità, cercando di dare una visione semplificata. Purtroppo, per reala
-izzare ciò si è dovuto ripensare l'architettura, mantenendo però un sistema per
-o e
+A sua volta, DCOM prevede di definire dei riferimenti diretti fra C e S, facendo in modo quindi che si conoscano 
+comunque, nonostante l'uso di un'interfaccia. Questi riferimenti quindi non son persistenti.\footnote{Vi è una losoa 
+diversa rispetto a CORBA: qui è necesario avere anche una visione di basso livello, nonostante l'uso delle interfacce 
+come in CORBA} DCOM si preoccupa di aumentare la dinamicità, cercando anche di andare oltre al C/S, ma fornendo 
+strumenti per trovare in maniera automatica la soluzione, fornendo supporto alla portabilità, cercando di dare una 
+visione semplificata. Purtroppo, per realizzare ciò si è dovuto ripensare l'architettura, mantenendo però un sistema per 
 integrare il sistema legacy precedente.
-Quello che infatti succede è che in automation le DLL diventano oggetti ade
-hoc. Questi oggetti, riassunti ed estensioni, sono i cosidetti ActiveX. Includono
-anche idee come OLE, ma restano molto complessi da realizzare, per cui è
-necessario sfruttare degli appositi wizard. Sono quindi fondamentalmente dei
-piccoli server OLE, in grado di attivarsi con il metodo della in-place activation,
-ma con un comportamento diverso: infatti, lavorano in maniera inside out,
-ovvero son sempre pronti, attivi, no a che l'oggetto contenuto è presente. Si
-tratta quindi di un sistema ad aggregazione sempre attiva (il componente interno
-è sempre attivo).
+Quello che infatti succede è che in automation le DLL diventano oggetti ad hoc. Questi oggetti, riassunti ed 
+estensioni, sono i cosidetti ActiveX. Includono anche idee come OLE, ma restano molto complessi da realizzare, per cui è
+necessario sfruttare degli appositi wizard. Sono quindi fondamentalmente dei piccoli server OLE, in grado di attivarsi 
+con il metodo della in-place activation, ma con un comportamento diverso: infatti, lavorano in maniera inside out,
+ovvero son sempre pronti, attivi, no a che l'oggetto contenuto è presente. Si tratta quindi di un sistema ad 
+aggregazione sempre attiva (il componente interno è sempre attivo).
 \subsection{Standardizzazione dei componenti}
-Un merito di COM e DCOM è stato quello di fornire un primo tentativo di stane
-dardizzare il concetto di componente. Prima si dovevano definire sempre diverse
-37 Vi è una losoa diversa rispetto a CORBA: qui è necesario avere anche una visione di
-basso livello, nonostante l'uso delle interfacce come in CORBA
-77
-interfacce, sempre utilizzabili dagli utenti, ma senza una razionalizzazione alla
+Un merito di COM e DCOM è stato quello di fornire un primo tentativo di standardizzare il concetto di componente. Prima 
+si dovevano definire sempre diverse interfacce, sempre utilizzabili dagli utenti, ma senza una razionalizzazione alla
 loro realizzazione.
-DCOM definisce per primo che un sistema a componenti deve definire un'architettura a PEM (Property, Event, Method ), per
-poter definire stato, output
-e input dei componenti. Questo sistema semplica la realizzazione, permettendo quindi di definire un container che sia
-semplicemente un gestore degli oggetti
-contenuti, in grado di attivarli attravero un'interfaccia uniforme e al sistema dell'introspezione. Il container deve
-solo fornire un'interfaccia IDispatch! Quindi,
-il container implementa la dispinterface definita dall'oggetto contenuto (questo
-deve solo definire quali eventi sono interessanti per lui); uno è la sorgente dele
-l'interfaccoa, l'altro il pozzo che la realizza. A sua volta, il container sfrutta
-degli oggetti intermedi per poter comunicare con l'oggetto contenuto.
-DCOM stabilisce anche la possibilità di realizzare una persistenza del coma
-ponente, implementando un'apposita interfaccia. (I riferimenti non son fissi in
-DCOM).
+DCOM definisce per primo che un sistema a componenti deve definire un'architettura a PEM (Property, Event, Method), per
+poter definire stato, output e input dei componenti. Questo sistema semplica la realizzazione, permettendo quindi di 
+definire un container che sia semplicemente un gestore degli oggetti contenuti, in grado di attivarli attraverso 
+un'interfaccia uniforme e al sistema dell'introspezione. Il container deve solo fornire un'interfaccia IDispatch! 
+Quindi, il container implementa la dispinterface definita dall'oggetto contenuto (questo deve solo definire quali eventi 
+sono interessanti per lui); uno è la sorgente dell'interfaccoa, l'altro il pozzo che la realizza. A sua volta, il 
+container sfrutta degli oggetti intermedi per poter comunicare con l'oggetto contenuto.
+DCOM stabilisce anche la possibilità di realizzare una persistenza del componente, implementando un'apposita 
+interfaccia. (I riferimenti non son fissi in DCOM).
 \subsection{Gestori delle sottoparti: i monikers}
-DCOM introduce i monikers come un sistema ad hoc, piuttosto complesso, per
-poter gestire in maniera persistente la gestione degli oggetti. Questo sistema
-aumenta la flessibilità, memorizzando su disco quindi i riferimenti agli oggetti,
+DCOM introduce i monikers come un sistema ad hoc, piuttosto complesso, per poter gestire in maniera persistente la 
+gestione degli oggetti. Questo sistema aumenta la flessibilità, memorizzando su disco quindi i riferimenti agli oggetti,
 categorizzandoli in base a cosa sono, e rendendoli indipendenti dalle applicazioni!
-Si ha quindi che ogni moniker viene associato ad un programma, permettendo
-anche di lavorare mediante nomi indiretti. Permette anche di moltiplicare i
-meccanismi, aggiungendo diversi monikers.
+Si ha quindi che ogni moniker viene associato ad un programma, permettendo anche di lavorare mediante nomi indiretti. 
+Permette anche di moltiplicare i meccanismi, aggiungendo diversi monikers.
 \subsection{Modello a thread di DCOM}
 Il modello deriva da quello di Win32. Tuttavia, vi possono essere dei problemi se certi componenti non risultano essere
-thread-safe (magari perché sono
-componenti legacy). Per superare questo problema, in DCOM si è introdote
-to il concetto di Apartment, che consiste ad un ambiente d'esecuzione isolato,
-cioè con una politica di threading ssata. Vi sono due diversi modelli, o quello
-single-threaded (più diffuso, un unico componente lavora nell'apartment) opu
-pure multi-threaded. Ogni componente può quindi avere più STA, ma sempre
-un solo MTA.
+thread-safe (magari perché sono componenti legacy). Per superare questo problema, in DCOM si è introdotto il concetto di 
+Apartment, che consiste ad un ambiente d'esecuzione isolato, cioè con una politica di threading fissata. Vi sono due 
+diversi modelli, o quello single-threaded (più diffuso, un unico componente lavora nell'apartment) oppure 
+multi-threaded. Ogni componente può quindi avere più STA, ma sempre un solo MTA.
 \subsection{Altri strumenti DCOM}
-Microsoft ha fornito mediante DCOM tantissimi strumenti, in grado di risolvere
-i problemi sempre più nell'ottica di un moderno mw.
-In particolare, si possono citare MSMQ per realizzare un sistema a scambio di
-messaggi, e COM+ per permettere la definizione di componenti solo attraverso
-la parte logica. Presenta anche un servizio X.500 di directory standard, detto
+Microsoft ha fornito mediante DCOM tantissimi strumenti, in grado di risolvere i problemi sempre più nell'ottica di un 
+moderno mw.
+In particolare, si possono citare MSMQ per realizzare un sistema a scambio di messaggi, e COM+ per permettere la 
+definizione di componenti solo attraverso la parte logica. Presenta anche un servizio X.500 di directory standard, detto
 Active Directory.
-78
 \subsection{.NET}
 Questa è la nuova architettura Microsoft, sviluppata ripensando totalmente il tutto! Non solo si è progettato pensando
-ad un S.O. diverso, ma anche rivoluzione 
-nando la stessa macchina virtuale (realizzando il CLR). Si tratta di un sistema
-derivato e migliorato (sotto certi aspetti) da Java: Java infatti ormai presenta
-dei sistemi legacy con cui deve far conto, per cui non può introdurre direttamente
-nuovi aspetti senza rompere con il passato (non si può, per esempio, introdurre
-un controllo dinamico delle risorse occupate da un thread, per denirlo anche a
-run-time!). .NET realizza anche lui un compilatore JIT, definisce una serie di
-classi base, rintroduce l'ereditarietà dell'implementazione, delle classi, e svilupa
-pa un sistema a livelli molto simile a quello di un mw moderno, con diversi
-servizi attivabili a basso ed ad alto livello.
-In particolare, .NET introduce una forte idea di località sfruttando l'idea
-dell'application domain: i processi non possono comunicare in maniera diretta
-fra di loro, ma devono sfruttare dei protocolli DCOM compatibili (è un sistema
+ad un S.O. diverso, ma anche rivoluzionando la stessa macchina virtuale (realizzando il CLR). Si tratta di un sistema
+derivato e migliorato (sotto certi aspetti) da Java: Java infatti ormai presenta dei sistemi legacy con cui deve far 
+conto, per cui non può introdurre direttamente nuovi aspetti senza rompere con il passato (non si può, per esempio, 
+introdurre un controllo dinamico delle risorse occupate da un thread, per definirlo anche a run-time!). .NET realizza 
+anche lui un compilatore JIT, definisce una serie di classi base, rintroduce l'ereditarietà dell'implementazione, delle 
+classi, e sviluppa un sistema a livelli molto simile a quello di un mw moderno, con diversi servizi attivabili a basso 
+ed ad alto livello.
+In particolare, .NET introduce una forte idea di località sfruttando l'idea dell'application domain: i processi non 
+possono comunicare in maniera diretta fra di loro, ma devono sfruttare dei protocolli DCOM compatibili (è un sistema
 simile all'apartment), oppure WS o altre nuove tecnologie .NET. WS per esempio è la tecnologia più costosa, ma anche più
-vicina all'applicazione da un punto
-di vista logico.
+vicina all'applicazione da un punto di vista logico.
 \subsection{.NET remoting}
 Si basa comunque sull'idea di realizzare dei proxy per facilitare la comunicazione.
-Tuttavia, vi sono due diversi tipi di proxy: quello trasparente (utile per fare
-richieste direttamente al supporto .NET e generato automaticamente) e quello
-reale (realizzato per facilitare la comunicazione C/S, spesso presente). Si ha
-quindi che il secondo proxy è anche modificabile, per poterlo adattare alle proe
-prie esigenze. In particolare, con questo sistema, si riesce a registrare un oggetto remoto all'interno del proprio
-application domain, per poterlo utilizzare in
-maniera trasparente!
-I proxy sono utilizzati per superare l'eterogeneità fra i sistemi, e per generare
-un canale come veicolo di trasporto dell'informazione. Questi canali possono essere di diverso tipo (binari, testuali,
-http compatibili, . . . i 2 standard sfruttano
-o TCP o HTTP), e si possono combinare per realizzare una catena di responsabilità (formattazione del messaggio,
-encoding, . . . )! Sono questi oggetti che
-permettono la comunicazione fra application domain diversi. Ogni application
-domain quindi registra i canali che si possono usare, permettendo alle volte anche una comunicazione bidirezionale.
+Tuttavia, vi sono due diversi tipi di proxy: quello trasparente (utile per fare richieste direttamente al supporto .NET 
+e generato automaticamente) e quello reale (realizzato per facilitare la comunicazione C/S, spesso presente). Si ha
+quindi che il secondo proxy è anche modificabile, per poterlo adattare alle proprie esigenze. In particolare, con 
+questo sistema, si riesce a registrare un oggetto remoto all'interno del proprio application domain, per poterlo 
+utilizzare in maniera trasparente!
+I proxy sono utilizzati per superare l'eterogeneità fra i sistemi, e per generare un canale come veicolo di trasporto 
+dell'informazione. Questi canali possono essere di diverso tipo (binari, testuali, http compatibili... i 2 standard 
+sfruttano o TCP o HTTP), e si possono combinare per realizzare una catena di responsabilità (formattazione del 
+messaggio, encoding...)! Sono questi oggetti che permettono la comunicazione fra application domain diversi. Ogni 
+application domain quindi registra i canali che si possono usare, permettendo alle volte anche una comunicazione 
+bidirezionale.
 Di default, le operazioni remote sono sempre sincrone, ma sfruttando opportunatamente i delegati si possono ottenere
-anche interazioni sincrone non
-bloccanti, sfruttando un meccanismo di call-back. I metodi possono fornire un
+anche interazioni sincrone non bloccanti, sfruttando un meccanismo di call-back. I metodi possono fornire un
 passaggio per valore (maggiormente disaccoppiato, ma in presenza di dati grandi, aumenta notevolmente l'overhead) o per
-riferimento (mediante la creazione
-di un proxy per memorizzare quindi un riferimento remoto), in maniera quindi
-79
-del tutto simile a CORBA!
-L'attivazione a chi tocca? Non son presenti dei POA come in CORBA,
-quindi si potrebbe prima di tutto pensare ad un'attivazione da parte del cliente
-(esistono meccanismi per fare il lease, e quindi mantenere il collegamento con il
+riferimento (mediante la creazione di un proxy per memorizzare quindi un riferimento remoto), in maniera quindi del 
+tutto simile a CORBA!
+L'attivazione a chi tocca? Non son presenti dei POA come in CORBA, quindi si potrebbe prima di tutto pensare ad 
+un'attivazione da parte del cliente (esistono meccanismi per fare il lease, e quindi mantenere il collegamento con il
 server oltre al tempo specificato\footnote{Server può anche interrogare il client prima di deallocare la risorsa}). In
-questa maniera si può anche mantenere
-uno stato.
-Gli oggetti remoti possono anche essere attivati dai server, in due diversi
-modi:
-$\bullet$ Come singleton (si attiva ora per sempre, ma non si può garantire uno
-stato permanente: il controllo dell'oggetto resta in mano al supporto che
-potrebbe deallocarlo).
-$\bullet$ oppure come oggetti di tipo single call, ovvero con durata limitata al tempo
-dell'invocazione, e quindi di costo limitato.
-Si ha quindi una politica d'attivazione molto più semplice rispetto a quella di
-CORBA!
+questa maniera si può anche mantenere uno stato.
+Gli oggetti remoti possono anche essere attivati dai server, in due diversi modi:
+\begin{itemize}
+ \item Come singleton (si attiva ora per sempre, ma non si può garantire uno stato permanente: il controllo dell'oggetto 
+ resta in mano al supporto che potrebbe deallocarlo).
+ \item oppure come oggetti di tipo single call, ovvero con durata limitata al tempo dell'invocazione, e quindi di costo 
+ limitato. Si ha quindi una politica d'attivazione molto più semplice rispetto a quella di CORBA!
+\end{itemize}
