--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -92,7 +92,7 @@ interno e i metodi con cui accedere. In particolare, in generale si parla di sem
 grado di funzionare solo in un ambito locale. Per riferire in remoto, serve un supporto esterno. Per esempio, si parla
 di utilizzare socket, protocolli standard de facto come TCP/IP...
 Tuttavia, è proprio questo il motivo per cui si vengono a definire dei middleware, ovvero delle strutture in grado di
-fornire un supporto completo alla comunicazione in remoto. Per esempio, Java Remot Method Invocation è un sistema in
+fornire un supporto completo alla comunicazione in remoto. Per esempio, Java Remote Method Invocation è un sistema in
 grado di estendere la semantica per riferimento locale, al remoto, cercando di fornire un sistema omogeneo per poter
 accedere sia ad oggetti locali che remoti. Nel caso specifico di RMI, per esempio, si utilizza un classico pattern dei
 middleware, il proxy come delegato per la comunicazione. Si realizzano infatti uno stub lato cliente e uno skeleton lato
