--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -23,7 +23,7 @@ determinati errori. E quindi un sistema rigido, che presenta dei \textit{costi f
 prevista quindi una \textit{politica di default}, non si stabiliscono risorse a priori come nel caso precedente,
 fornendo un comportamento più flessibile. I costi risultano essere variabili, a seconda della complessità del sistema
 (al crescere degli attori, aumenta il numero necessario di lock/semafori da utilizzare, per esempio). Il costo può
-quindi essere limitato a seconda delle esigenze.' 
+quindi essere limitato a seconda delle esigenze.
 \end{itemize}
 Esempio: una serie di clienti vogliono accedere in maniera univoca ad una risorsa unica: si tratta quindi di un problema
 di sincronizzazione e mutua esclusione. Si potrebbe risolvere fornendo dei quanti di tempo decisi a priori per ogni
