--- a/RetiDiCalcolatoriM.tex
+++ b/RetiDiCalcolatoriM.tex
@@ -10,9 +10,13 @@
 \usepackage{color}
 \usepackage{hyperref}
 \usepackage{amsmath}
+
+\frenchspacing
+
 \title{Riassunto di studio per Reti di Calcolatori M}
 \author{Daniele Tiles \and Davide Bellettini (revisione)}
 \date{2007 - 2014}
+
 \begin{document}
 \maketitle
 \newpage
